# agent-bridge

./: .env.example  .gitignore  0523_handoff.md  AGENTS.md  GEMINI.md  README.md  agent_bridge_mvp.md  antigravity-gemini3.5_review.md  gpt_suggenst.md  handoff_phase5.md  implementationplan.md  nanogpt  opencode_dsv4_flash_review.md  pyproject.toml  roadmap.md  운영규칙
.agent/metrics/: model_routing.md
.agent/tasks/: bench_model_matrix_report.md  bench_model_matrix_report.toml  bench_readonly_config_report.md  bench_readonly_config_report.toml  bench_readonly_gate_report.md  bench_readonly_gate_report.toml  bench_readonly_runner_flow_report.md  bench_readonly_runner_flow_report.toml  bench_worktree_patch_latency_classifier.md  bench_worktree_patch_latency_classifier.toml  claude_proxy_readonly_smoke.md  commander_model_routing_redesign.md  commander_model_routing_redesign.toml  commander_worktree_execution_design.md  commander_worktree_execution_design.toml  gemini_rules_hardening.md  gemini_rules_hardening.toml  phase1_smoke.md  phase5a_task_spec_validation.md  phase5a_task_spec_validation.toml  phase5b_antigravity_smoke.md  (+18 more)
.antigravitycli/: fba862ed-2d1b-45f9-9ec5-eba0fc24ae2c.json
config/: agents.toml  providers.toml  runners.toml
docs/: adapter_contract_and_cli_runner.md  commander_handbook.md  model_observations.md  task_spec_v0.md  worktree_execution_v0.md
test/: smoke_nanogpt.py  test_aider_adapter.py  test_artifact_root.py  test_benchmarks.py  test_compare.py  test_process_rollup.py  test_task_patch_gate.py
tmp/: parse_pb.py  test_agy_output.py
(+35 files in other folders)
